# crosscompute-views-map

./: .gitignore  README.md  TODO.goals  setup.cfg
crosscompute_views_map/: constants.py  deck.py  mapbox.py  pydeck.py
crosscompute_views_map/assets/: deck-screengrid-output-header.js  deck-screengrid-output-variable.js  deck-screengrid-output.js  felt-input-header.js  felt-input.js  felt.css  felt.html  map.css  mapFeltInputHeader.js  mapFeltInputVariable.js  mapbox-header.js  mapbox-location-input-header.js  mapbox-location-input.html  mapbox-location-input.js  mapbox-output-header.js  mapbox-output-variable.js  mapbox-output.js  mapbox.html  nebula.html  nebulaLocationInputHeader.js  nebulaLocationInputVariable.js
crosscompute_views_map/routines/: asset.py  variable.py
crosscompute_views_map/templates/: deckScreenGridHeader.js  deckScreenGridOutputVariable.js  mapbox.html  mapboxHeader.js  mapboxLocationInput.html  mapboxLocationInputHeader.js  mapboxLocationInputVariable.js  mapboxOutput.html  mapboxOutputHeader.js  mapboxOutputVariable.js
tests/: automate.yml  output.md
tests/gather-geojson/: automate.yml  output.md
tests/gather-geojson/batches/standard/input/: felt.geojson.configuration  variables.dictionary
tests/refresh-variables/: automate.yml  run.py  style.css
tests/refresh-variables/batches/standard/input/: variables.dictionary
