[metadata]
name = crosscompute-views-map
version = 0.1.1
description = Render maps in your automations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://crosscompute.com
author = CrossCompute Inc.
author_email = support@crosscompute.com
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    # Framework :: CrossCompute
    # Intended Audience :: Analysts
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
project_urls =
    Bug Tracker = https://github.com/crosscompute/crosscompute-views-map/issues
    Documentation = https://github.com/crosscompute/crosscompute-views-map
    Source Code = https://github.com/crosscompute/crosscompute-views-map
[options]
packages = find:
python_requires = >=3.9
install_requires =
    crosscompute>=0.9.1.4
zip_safe = True
[options.entry_points]
crosscompute.views =
    map-mapbox = crosscompute_views_map.routines.variable.MapMapboxView
    map-deck-screengrid = crosscompute_views_map.routines.variable.MapDeckScreenGridView

[flake8]
max-line-length = 79
select = B,C,E,F,W
ignore = W503
